--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
 
 /* Global Styles */
 :root {
-  --primary-color: #d8b34e;
+  --primary-color: #6b76d8;
   --dark-color: #333333;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
